- enhancing KBox API